
    Some change notes are brief; consult the documentation for further
    information/clarification.  It is possible that some changes to
    MHonArc are not documented here, but every effort is made to list
    all changes that will be visible to users of MHonArc.

YYYY/MM/DD
============================================================================
2003/08/07	(2.6.7)

* Bug Fixes:

    Bug ID  Summary
    ------  ------------------------------------------------------------
     4569   Problem with unfolding can mess up boundary processing in
	    multipart messages.
     4594   Initial space on lines removed when using fancyquote.
    ------  ------------------------------------------------------------
    <https://savannah.nongnu.org/bugs/?group=mhonarc>

* Added LANG resource to define locale.  Affects resource filename
  resolution and message subject and author sorting.

* readmail.pl updated to define the following special header field
  keys passed to filter routines:

    x-mha-content-type	  The media type of the entity extracted from
			  content-type entity header
    x-mha-part-number	  The relative part number of the entity with
			  respect to parent entity.  To get the
			  absolute part number, use
			  readmail::get_full_part_number($fields).
    x-mha-parent-header	  Reference to parent header fields hash.

  This, and other data structures, are now mentioned in the MIMEFILTERS
  resource page.

* Text/richtext tag, <samepage>, is quietly dropped in mhtxtenrich.pl.

============================================================================
2003/07/21	(2.6.6)

* Bug Fixes:

    Bug ID  Summary
    ------  ------------------------------------------------------------
     4387   m2h_text_plain::filter maxwidth usage can lead to crash
	    with a certain kind of input 
    ------  ------------------------------------------------------------
    <http://savannah.nongnu.org/bugs/index.php?group_id=1968