@@ -13,6 +13,17 @@
 
 YYYY/MM/DD
 ============================================================================
+2003/08/12	(2.6.8)
+
+* Bug Fixes:
+
+    Bug ID  Summary
+    ------  ------------------------------------------------------------
+     4719   Spurious read_fmt_file call
+    ------  ------------------------------------------------------------
+    <https://savannah.nongnu.org/bugs/?group=mhonarc>
+
+============================================================================
 2003/08/07	(2.6.7)
 
 * Bug Fixes:
@@ -2562,4 +2573,4 @@ YYYY/MM/DD
 
 =======================================================================
 Earl Hood, mhonarc@mhonarc.org
-$Id: CHANGES,v 1.116 2003/08/07 21:34:27 ehood Exp $
+$Id: CHANGES,v 1.117 2003/08/13 04:18:17 ehood Exp $
